--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,7 @@
-body {
-  background-color: white;
-  font-family: Arial, sans-serif;
-}
-
-h1 {
-  color: #00698f;
-  font: size 36px;
-  text-align: center;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-ul li {
-  margin-right: 20px;
-}
-
 a {
   text-decoration: none;
   color: #00698f;
 }
-
 a:hover {
   color: #003d5f;
 }
@@ -49,54 +27,4 @@ form {
   background-color: #f2f2f2;
 }
 
-th {
-  background-color: #f0f0f0;
-}
-
-/* Base styles */
-body {
-  font-family: Arial, sans-serif;
-  margin: 20px;
-}
-
-form {
-  margin-bottom: 20px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-}
-
-th,
-td {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin-bottom: 20px;
-}
-
-a {
-  display: block;
-  margin-bottom: 20px;
-}
-
-/* Responsive styles */
-@media (max-width: 600px) {
-  form,
-  table,
-  img,
-  a {
-    width: 100%;
-  }
-  th,
-  td {
-    font-size: 14px;
-  }
-}
+/*# sourceMappingURL=styles.css.map */
